--- a/css/tsai.css
+++ b/css/tsai.css
@@ -60,7 +60,7 @@ a.btn {
         background: #fff; }
     .intro .infoBox .left p {
       font-size: 15px;
-      color: #dddddd;
+      color: #fff;
       line-height: 1.8; }
     .intro .infoBox .left a.btn {
       margin-top: 40px;
