--- a/css/tptea.css
+++ b/css/tptea.css
@@ -280,7 +280,7 @@ section.style {
     color: #fff;
     margin-bottom: 70px; }
   section.style .left {
-    padding: 0 0 0 40px; }
+    padding: 0 160px 0 40px; }
     section.style .left ul {
       margin: 0 -23px; }
       section.style .left ul li {
