--- a/css/home.css
+++ b/css/home.css
@@ -25,3 +25,12 @@ header {
     .bannerArea ul li .Txt p.title {
       font-size: 200px;
       font-weight: bold; }
+@media (max-width: 1370px){
+  .bannerArea ul li .Txt p.title{
+    font-size: 140px;
+  }
+  .bannerArea ul li .Txt{
+    left: 85px;
+    bottom: 100px;
+  }
+}
