--- a/css/master.css
+++ b/css/master.css
@@ -46,8 +46,11 @@ body {
   visibility: hidden; }
 
 .outerwrap {
-  padding-left: 295px; }
-
+  padding-left: 295px; 
+  }
+.m_menu{
+  display: none;
+}
 header {
   position: fixed;
   top: 0;
@@ -158,4 +161,114 @@ nav {
     padding: 40px 20px 0 20px;
   }
 
+}
+@media (max-width:1180px){
+    header{
+      display: none;
+    }
+    .outerwrap{
+      padding:60px 0 0 0;
+    }
+    .m_menu{
+      display: block;
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      z-index: 100;
+    }
+    .m_menu .controlBox{
+      background: #fff;
+      height: 60px;
+      box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+      z-index: 99;
+    }
+    .m_menu .controlBox .m_logo{
+      display: inline-block;
+      padding: 2px 0 0 10px;
+    }
+     .m_menu .controlBox img{
+       width: 120px;
+     }
+     .m_menu .controlBox a.main{
+        float: right;
+        line-height: 60px;
+        padding: 0 10px;
+        font-size: 20px;
+        cursor: pointer;
+        color: #f2a59f;
+     }
+    .m_menu .hideBox{/*手機menu內容*/
+      display:none;
+      background:rgba(255,255,255,1);
+      width:100%;
+      padding:60px 0;
+      overflow-y:auto;
+      -webkit-overflow-scrolling:touch;
+      position:fixed;
+      left:0;
+      top:0;
+      bottom:0;
+      z-index:11;
+      box-sizing:border-box;}
+
+    .m_menu .hideBox p.sp{
+      display:none;
+      padding:10px;
+      font-size:13px;
+      color:#FFF;
+      background: #C80303;}
+
+    .m_menu ul.nav{
+      padding-top: 40px;
+    }
+    .m_menu ul.nav li{
+      border-bottom: 1px solid #cccccc;}
+    .m_menu ul.nav li a{
+      padding:20px 10px;
+      display:block;
+      color: #111;
+      font-size: 16px;
+      text-align:center;
+      position:relative;}
+    .m_menu ul.nav li a em{
+      font-family: 'Roboto', "微軟正黑體",sans-serif;
+      font-weight: bold;
+      font-size: 24px;
+      margin-right: 24px;
+    }
+     .m_menu .hideBox .downBox {
+        text-align: center;
+        margin-top: 50px;
+         }
+     .m_menu .hideBox .downBox span {
+      display: inline-block;
+      font-family: 'Roboto', "微軟正黑體",sans-serif;
+      color: #111;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 25px;
+      border: 1px solid #f2a59f; }
+       .m_menu .hideBox .downBox span:after {
+        content: "";
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        right: 5px;
+        bottom: 5px;
+        border: 2px solid #f2a59f; }
+       .m_menu .hideBox .downBox span p {
+        padding: 5px 0; }
+     .m_menu .hideBox .downBox a {
+      display: block;
+      margin: 8px 0;
+      color: #666666; }
+       .m_menu .hideBox .downBox a i {
+        color: #f2a59f;
+        font-size: 18px;
+        margin-right: 15px;
+        display: inline-block;
+        vertical-align: middle; }
+         .m_menu .hideBox .downBox a i.phone {
+          font-size: 35px; }
 }
